# geotiff

./: CMakeLists.txt  README.md
include/: geotiff.hpp
src/: geotiff.cpp  geotiff_test.cpp
